plugins {
    id 'java'
    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.3'
    id 'maven-publish'
    id 'hytale-mod' version '0.+'
}

ext {
    hytaleHome = "${System.getProperty("user.home")}/AppData/Roaming/Hytale"
}

// Set group and version from properties if not already defined
group = project.findProperty('maven_group') ?: group
version = project.findProperty('version') ?: version

// Convert java toolchain block to closure form and keep sources/javadoc jars
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
    withSourcesJar()
    withJavadocJar()
}

// Quiet warnings about missing Javadocs.
javadoc {
    options.addStringOption('Xdoclint:-missing', '-quiet')
}

// Add repositories from provided build snippet
repositories {
    mavenCentral()
    maven {
        url 'https://maven.hytale-modding.info/releases'
        name = 'HytaleModdingReleases'
    }
}

// Adds the Hytale server as a build dependency, allowing you to reference and
// compile against their code. This requires you to have Hytale installed using
// the official launcher for now.
dependencies {
    implementation(files("$hytaleHome/install/$patchline/package/game/latest/Server/HytaleServer.jar"))
    // Optional compileOnly assets handling adapted from provided snippet
    def appData = System.getenv('APPDATA') ?: ''
    def hytaleAssets = file("${appData}/Hytale/install/release/package/game/latest/Assets.zip")
    if (hytaleAssets.exists()) {
        compileOnly(files(hytaleAssets))
    } else {
        logger.warn("Hytale Assets.zip not found at: ${hytaleAssets.absolutePath}")
    }

    // Use a newer Lombok release to match the JDK's javac internals
    compileOnly 'org.projectlombok:lombok:1.18.40'
    annotationProcessor 'org.projectlombok:lombok:1.18.40'

    // Ensure tests also compile with Lombok
    testCompileOnly 'org.projectlombok:lombok:1.18.40'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.40'
}

// Create the working directory to run the server if it does not already exist.
def serverRunDir = file("$projectDir/run")
if (!serverRunDir.exists()) {
    serverRunDir.mkdirs()
}

// Updates the manifest.json file with the latest properties defined in the
// build.properties file. Currently we update the version and if packs are
// included with the plugin.
tasks.register('updatePluginManifest') {
    def manifestFile = file('src/main/resources/manifest.json')
    doLast {
        if (!manifestFile.exists()) {
            throw new GradleException("Could not find manifest.json at ${manifestFile.path}!")
        }
        def manifestJson = new groovy.json.JsonSlurper().parseText(manifestFile.text)
        manifestJson.Version = version
        manifestJson.IncludesAssetPack = includes_pack.toBoolean()
        manifestFile.text = groovy.json.JsonOutput.prettyPrint(groovy.json.JsonOutput.toJson(manifestJson))
    }
}

// Creates a run configuration in IDEA that will run the Hytale server with
// your plugin and the default assets.
// Guarded creation/update to avoid duplicate run-configuration errors
def runConfs = idea.project.settings.runConfigurations

afterEvaluate {
    tasks.named('runServer') {
        if (includes_pack.toBoolean()) {
            args += "--mods=${file('src/main/resources').absolutePath}"
        }
        if (load_user_mods.toBoolean()) {
            args += "--mods=$hytaleHome/UserData/Mods"
        }

    }
}

// If you want an IDEA run configuration created automatically, use a separate
// helper script or create it manually in the IDE. Leaving IDE workspace files
// untouched avoids configuration-time failures.

// hytale plugin placeholder
hytale {
    // plugin-specific configuration can be added here
}

// Jar manifest attributes similar to provided build snippet
tasks.withType(Jar) {
    manifest {
        attributes['Specification-Title'] = rootProject.name
        attributes['Specification-Version'] = version
        attributes['Implementation-Title'] = project.name
        attributes['Implementation-Version'] = providers.environmentVariable('COMMIT_SHA_SHORT')
            .map { "${version}-${it}" }
            .getOrElse(version.toString())
    }
}

// Publishing block adapted for Groovy DSL
publishing {
    repositories {
        // Add publishing repositories here if needed
    }

    publications {
        create('maven', MavenPublication) {
            from components['java']
        }
    }
}

// IDEA module settings to download sources/javadoc
idea {
    module {
        // Use property names supported by the IDEA plugin model
        downloadSources = true
        downloadJavadoc = true
    }
}

// Add sourceSets exclusion so the in-repo com.hypixel sources (decompiled/stub API) are not compiled
sourceSets {
    main {
        java {
            exclude 'com/hypixel/**'
        }
    }
}
